Fixed modal visibility, added PH on image error

--- a/front/sass/main.css
+++ b/front/sass/main.css
@@ -46,6 +46,7 @@ header nav ul li {
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.8);
+  display: none;
 }
 
 .modal-wrapper {
